# clip2tri

./: CMakeLists.txt  README.md  test.cpp
clip2tri/: clip2tri.cpp  clip2tri.h
clipper/: CMakeLists.txt
poly2tri/: CMakeLists.txt
poly2tri/common/: shapes.cc
poly2tri/sweep/: sweep.cc
